--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cookie": "^0.5.0",
+    "crypto-js": "^4.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
