--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,8 @@
     "redux": "^4.2.1",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "cypress": "^12.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
