--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
     "crypto.js": "^3.1.1",
+    "cypress": "^12.14.0",
     "form-data": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -24,8 +25,7 @@
     "redux": "^4.2.1",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.0",
-    "yarn": "^1.22.19",
-    "cypress": "^12.14.0"
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
